--- a/style.css
+++ b/style.css
@@ -117,3 +117,101 @@ section {
 
   align-items: center;
 }
+
+/* footer */
+
+footer {
+  background-color: black;
+}
+.footer-h3 {
+  text-align: center;
+  color: white;
+  padding: 50px 0 30px 0;
+}
+footer hr {
+  background-color: gray;
+  border: 0px;
+
+  height: 1px;
+  width: 70%;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.footer-menu {
+  text-align: center;
+  padding-bottom: 70px;
+}
+.footer-menu a {
+  text-decoration: none;
+  color: white;
+  font-size: 15px;
+  margin-right: 30px;
+}
+.social {
+  text-align: center;
+}
+.fa-brands {
+  color: white;
+  font-size: 30px;
+  margin-right: 20px;
+  padding-bottom: 50px;
+}
+
+/* responsive */
+
+@media only screen and (max-width: 688px) {
+  .hero-div {
+    display: flex;
+    flex-direction: column;
+  }
+  .hero-h2,
+  .hero-p {
+    text-align: center;
+  }
+  .hero-btn {
+    display: block;
+    text-align: center;
+    padding: 15px;
+    width: 50%;
+    margin: 25px auto;
+  }
+  .hero-img-div {
+    display: block;
+
+    margin: 0 auto;
+    height: 305px;
+  }
+  .blog {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    margin: 0;
+    padding: 15px;
+  }
+  .blog-menu {
+    background-color: white;
+  }
+  .blog-menu-link {
+    display: inline-block;
+    border: 1px solid gray;
+    border-radius: 5px;
+    width: 25%;
+    margin: 15px auto;
+  }
+  .blog-menu3 {
+    border: 0;
+  }
+  .blog-div {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .footer-menu {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .footer-menu a {
+    color: white;
+    font-size: 15px;
+    margin: 20px;
+  }
+}
