--- a/style.css
+++ b/style.css
@@ -187,12 +187,15 @@ footer hr {
     margin: 0 auto;
     height: 305px;
   }
+  .hero-img {
+    width: 100%;
+  }
   .blog {
     display: grid;
     grid-template-columns: 1fr;
     justify-content: center;
     margin: 0;
-    padding: 15px;
+    padding: 5px;
   }
   .blog-menu {
     background-color: white;
